how to use